# andrep

./: .cspell.json  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml
clients/: README.md  call_andrep.bat  call_andrep.sh
clients/js/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
clients/python/: rest.py
clients/server/: core.py  run.sh  server_fastapi.py  server_fastapi.sh  server_flask.py  (+1 more)
docs/: manual.md  tutorial.md
editor/: package.json  pnpm-lock.yaml  svelte.config.js
renderer/: .gitignore  README.md  pyproject.toml
renderer-js/: README.md
renderer-python/: requirements.txt
renderer/andrep/: __main__.py  barcode.py  expr_cli.py  expr_tools.py  loader.py  renderer.py  variables.py
renderer/examples/: 02_articles.py  02_articles_landscape.py  03_detail.py  03_detail_summary.py  06_img_markdown.py  07_embed_orientation.py  08_invoice.py  detail_expression.sh
renderer/examples/templates/: detail.json  doc_foot_invoice.json  doc_ftitle.json  doc_invoice.json  doc_rows.json  doc_title.json  sells.json  test_img_md.json
renderer/sample/: 02_articles.py  03_detail.py  06_img_markdown.py  07_embed.py  07a_embed.py  08_invoice.py  create_db.sh
renderer/sample/templates/: stdhdr.json
renderer/samples/: 02_articles.py  02_articles_landscape.py  03_detail.py  03_detail_summary.py  04_labels.py  07_embed.py  07_embed_orientation.py
renderer/samples/data/: SRV003.txt
renderer/samples/templates/: articles_landscape.json  stdlds.json  test_embed.json  test_invoice.json
(+77 files in other folders)
